VSE: With "Hold offset" snap on, invisible snap-to frame appears one frame from left edge of certain strip types #90835

Closed
opened 2021-08-21 19:25:54 +02:00 by David Salvo · 8 comments

System Information
Operating system: Linux-5.4.0-81-generic-x86_64-with-glibc2.31 64 Bits
Graphics card: GeForce 9800 GT/PCIe/SSE2 NVIDIA Corporation 3.3.0 NVIDIA 340.108

Blender Version
Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-08-18 20:22, hash: a217e043be
Worked: Unsure

Short description of error
This bug occurs only when the "Hold offset" snap option is toggled on.

There is a phantom third snap-to frame apart from left and right edge that exists one frame from the left edge of the strip, but only for the following strip types:

  • Image
  • Colour
  • Text
  • Adjustment
  • Multicam

The following strip types aren't affected:

  • Movie
  • Sound
  • Meta

(Note: that the strip type of the grabbed/moving strip does not matter).

Exact steps for others to reproduce the error
third-phantom-snap-point-on-certain-strip-types.blend

In the attached blend file there are clusters of all 8 strip types mentioned above (Note: the types that don't show signs of this specific bug are on the higher channels).

For any cluster, grab and drag the bottom strip along x-axis from its starting point at marker slowly all the way until it reaches the right marker. This will allow you to observe the invisible snap frame behaviour (or lack of it),

When observing, keep in mind the behaviour mentioned in this bug report: https://developer.blender.org/T90826

Example of erroneous strip group:
phantom-snap-bug.gif

**System Information** Operating system: Linux-5.4.0-81-generic-x86_64-with-glibc2.31 64 Bits Graphics card: GeForce 9800 GT/PCIe/SSE2 NVIDIA Corporation 3.3.0 NVIDIA 340.108 **Blender Version** Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-08-18 20:22, hash: `a217e043be` Worked: Unsure **Short description of error** This bug occurs only when the "Hold offset" snap option is toggled on. There is a phantom third snap-to frame apart from left and right edge that exists one frame from the left edge of the strip, but only for the following strip types: - Image - Colour - Text - Adjustment - Multicam The following strip types aren't affected: - Movie - Sound - Meta (Note: that the strip type of the grabbed/moving strip does not matter). **Exact steps for others to reproduce the error** [third-phantom-snap-point-on-certain-strip-types.blend](https://archive.blender.org/developer/F10300640/third-phantom-snap-point-on-certain-strip-types.blend) In the attached blend file there are clusters of all 8 strip types mentioned above (Note: the types that don't show signs of this specific bug are on the higher channels). For any cluster, grab and drag the bottom strip along x-axis from its starting point at marker slowly all the way until it reaches the right marker. This will allow you to observe the invisible snap frame behaviour (or lack of it), When observing, keep in mind the behaviour mentioned in this bug report: https://developer.blender.org/T90826 Example of erroneous strip group: ![phantom-snap-bug.gif](https://archive.blender.org/developer/F10300698/phantom-snap-bug.gif)
Author

Added subscriber: @slinkeepie

Added subscriber: @slinkeepie
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm.
These strips dont have a Hold Offset (but of course, this should not cause this kind of behavior).

Can confirm. These strips dont have a Hold Offset (but of course, this should not cause this kind of behavior).
Member

Added subscriber: @iss

Added subscriber: @iss
Member

Checking seq->endstill == 0 in seq_snap_target_points_build seems wrong @iss, no?

Checking `seq->endstill == 0` in `seq_snap_target_points_build` seems wrong @iss, no?

This issue was referenced by 4266538ab9

This issue was referenced by 4266538ab980fc475a6fd295892b1ad48ee2b7dd

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Richard Antalik self-assigned this 2021-10-25 04:46:33 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#90835
No description provided.