source/blender/editors/transform/transform_snap_sequencer.c
@@ -220,12 +220,8 @@ static void seq_snap_target_points_build(const TransInfo *t,
       int content_end = max_ii(seq->startdisp, seq->start + seq->len);
       /* Effects and single image strips produce incorrect content length. Skip these strips. */
       if ((seq->type & SEQ_TYPE_EFFECT) != 0 || seq->len == 1) {
-        if (seq->anim_startofs == 0 && seq->startstill == 0) {
-          content_start = seq->startdisp;
-        }
-        if (seq->anim_endofs == 0 && seq->endstill == 0) {
-          content_end = seq->enddisp;
-        }
+        content_start = seq->startdisp;
+        content_end = seq->enddisp;
       }
 
       CLAMP(content_start, seq->startdisp, seq->enddisp);
